# trab_ufes

./: README.md
ed1/trab1/: in  in2  lista.c  lista.h  makefile  prog.c
ed1/trab2/codigo/: arv.c  arv.h  makefile  progarv.c
ed1/trab2/codigo/grammar/: Arvore.lsy
ed2/: CMakeLists.txt  README.md
ed2/ed2_trab_1/runa/: .directory  io_arq.c  main.c  makefile  rand_file.c
ed2/ed2_trab_1/runb/: io_arq.h  lib_sort.c  lib_sort.h  main.c  makefile  rand_file.h
ed2/ed2_trab_2/: Alfabeto.txt  Palavras_Chave.txt  Texto.txt  alfabeto.txt  ent  in  makefile  relatorio  saida1  saida2  search.txt  searchfor
ed2/ed2_trab_2/arvore/: alphabet.c  alphabet.h  btree_unb.c  btree_unb.h  main.c  ocr_list.c  ocr_list.h  word_struct.c  word_struct.h
ed2/ed2_trab_2/exercicio3/: arvorebinaria.c  hashendaberto.c  script.sh
ed2/ed2_trab_2/hash/: alphabet.c  alphabet.h  main.c  makefile  ocr_list.c  ocr_list.h  reverse_hfile.c  reverse_hfile.h  search_rhf.c  search_rhf.h  word_struct.c  word_struct.h
prog1/: exercicios.hs  saida.txt  trab-EC-jordaorosario-felipegante.hs
prog2/trab1/: trabalho.c
prog2/trab2/: libcity.h  makefile  trab-comp2.c
prog3/trabalho/: build.xml
prog3/trabalho/src/trabalho/: Aluno.java  Alunos.java  Avaliacao.java  Avaliacoes.java  Curso.java  Cursos.java  Disciplina.java  Disciplinas.java  Estatistica.java  Graduando.java  Main.java  Nota.java  Notas.java  Planilhas.java  PosGraduando.java  Relatorios.java  Trabalho.java  package-info.java
prog3/trabalho/src/trabalho/exception/: DadoAusenteException.java  DadoInconsistenteException.java  DisciplinaNaoEncontradaException.java  (+4 more)
prog3/trabalho2/: main.cpp  main.h  makefile
prog3/trabalho2/ufes_sys/exception/: ufes_sys_Exception.cpp  ufes_sys_Exception.hpp
prog3/trabalho2/ufes_sys/sys/: Aluno.cpp  Aluno.hpp  Avaliacao.cpp  Avaliacao.hpp  Curso.cpp  Curso.hpp  Disciplina.cpp  Disciplina.hpp  Estatistica.cpp  Estatistica.hpp  Graduando.cpp  Graduando.hpp  Leitura.cpp  ManipulaString.cpp  ManipulaString.hpp  Nota.cpp  Nota.hpp  PosGraduando.cpp  PosGraduando.hpp  Printable.hpp  Relatorios.cpp  Relatorios.hpp  Trabalho.cpp  Trabalho.hpp  Ufes.cpp  Ufes.hpp
(+14 files in other folders)
